--- a/css/about.css
+++ b/css/about.css
@@ -14,8 +14,7 @@
 }
 
 .aboutmobile {
-	width: 100vw;
-	height: 75vh;
+	padding-bottom: 10px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -213,7 +212,6 @@
 @media (max-width: 900px) {
 	.aboutPage {
 		height: auto;
-		width: 100vw;
 		padding: 30px 40px;
 		display: flex;
 		flex-direction: column;
