--- a/css/blog.css
+++ b/css/blog.css
@@ -86,9 +86,12 @@
     margin-top: 10px;
 }
 
+/** AUTHOR **/
+/**
 .blog .contain_2 .author p {
 	font-size: 18px;
 }
+**/
 
 @media (max-width: 787px) {
 	.blog .header {
@@ -114,6 +117,11 @@
     .blog .header .blog_name h1 {
         font-size: 80px !important;
     }
+}
+
+/** BANNER **/
+.blog .banner img {
+	width: 100%;
 }
 
 /** ARTICLE **/
