--- a/css/recipe.css
+++ b/css/recipe.css
@@ -34,3 +34,32 @@
 	border: 1px solid #ccc;
 	border-top: none;
 }
+
+.checked {
+	color: orange;
+}
+
+.checked.fa-pepper-hot {
+	color: red;
+}
+
+.ingredient-container {
+	text-align: left;
+	max-width: 700px;
+	margin: 0 auto;
+}
+
+.food-image {
+	margin: 2vh 0 2vh 0;
+	max-width: 100%;
+	height: auto;
+}
+
+.food-image-container {
+	margin: 0 auto;
+	max-width: 700px;
+}
+
+.instructions {
+	text-align: left;
+}
