--- a/css/recipe.css
+++ b/css/recipe.css
@@ -56,7 +56,7 @@
 }
 
 .food-image-container {
-	margin: 0 auto;
+	margin: 2rem auto 2rem auto;
 	max-width: 700px;
 }
 
@@ -70,4 +70,12 @@
 
 .tab {
 	border-radius: 10px 10px 0 0;
+}
+
+h3 {
+	margin-top: 2rem;
+}
+
+ol {
+	list-style: decimal;
 }
