--- a/css/recipe.css
+++ b/css/recipe.css
@@ -109,6 +109,11 @@ ol {
 	list-style: decimal;
 }
 
+ol > li {
+	margin-top: 0.5rem;
+	margin-bottom: 0.5rem;
+}
+
 body {
 	font-size: 20px;
 	font-family: 'Jost';
