--- a/css/recipe.css
+++ b/css/recipe.css
@@ -65,7 +65,7 @@
 
 .ingredient-container {
 	text-align: left;
-	max-width: 700px;
+	max-width: 400px;
 	margin: 0 auto;
 }
 
@@ -90,6 +90,23 @@
 	text-align: left;
 	max-width: 900px;
 	margin: 3rem auto 2rem auto;
+}
+
+.iframe-container {
+	overflow: hidden;
+	/* 16:9 aspect ratio */
+	padding-top: 56.25%;
+	position: relative;
+	margin: 2rem auto 2rem auto;
+}
+
+.iframe-container iframe {
+	border: 0;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
 }
 
 .title {
